// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Header/TopHeader Default 1`] = `
.c0 {
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c5:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: none;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c5 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <div
        className="c3"
      >
        <ul
          className="c4"
        >
          <li
            className="c5"
          >
            <a
              href="/project"
              id={null}
              onClick={[Function]}
            >
              <span>
                Projects
              </span>
            </a>
          </li>
          <li
            className="c6"
          >
            <a
              href="/user"
              id="userBtn"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/settings"
              id={null}
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </li>
          <li
            className="c7"
            id="logoutBtn"
            onClick={[Function]}
          >
            <span>
              Log out
            </span>
          </li>
        </ul>
        <ul
          className="c8"
        >
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                About Schema CMS
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                API Doc
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                GitHub Repository
              </span>
            </a>
          </li>
        </ul>
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/TopHeader Header with custom menu 1`] = `
.c0 {
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: none;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c5:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c5 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <div
        className="c3"
      >
        <ul
          className="c4"
        >
          <li
            className="c5"
          >
            <a
              href="/path"
              id={null}
              onClick={[Function]}
            >
              Primary
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/path"
              id={null}
              onClick={[Function]}
            >
              Charts
            </a>
          </li>
          <li
            className="c6"
          >
            <a
              href="/project"
              id={null}
              onClick={[Function]}
            >
              <span>
                Projects
              </span>
            </a>
          </li>
          <li
            className="c7"
          >
            <a
              href="/user"
              id="userBtn"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </li>
          <li
            className="c6"
          >
            <a
              href="/settings"
              id={null}
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </li>
          <li
            className="c5"
            id="logoutBtn"
            onClick={[Function]}
          >
            <span>
              Log out
            </span>
          </li>
        </ul>
        <ul
          className="c8"
        >
          <li
            className="c9"
          >
            <a
              href="/path"
              id={null}
              onClick={[Function]}
            >
              Secondary
            </a>
          </li>
          <li
            className="c9"
            id="id"
            onClick={[Function]}
          >
            Click action
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                About Schema CMS
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                API Doc
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                GitHub Repository
              </span>
            </a>
          </li>
        </ul>
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/TopHeader Long title and subtitle 1`] = `
.c0 {
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c5:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: none;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c5 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

          </h1>
        </div>
      </div>
      <div
        className="c3"
      >
        <ul
          className="c4"
        >
          <li
            className="c5"
          >
            <a
              href="/project"
              id={null}
              onClick={[Function]}
            >
              <span>
                Projects
              </span>
            </a>
          </li>
          <li
            className="c6"
          >
            <a
              href="/user"
              id="userBtn"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/project/projectId"
              id={null}
              onClick={[Function]}
            >
              <span>
                Project details
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/project/projectId/datasource"
              id={null}
              onClick={[Function]}
            >
              <span>
                Data Sources
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/project/projectId/folder"
              id={null}
              onClick={[Function]}
            >
              <span>
                Pages
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/settings"
              id={null}
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </li>
          <li
            className="c7"
            id="logoutBtn"
            onClick={[Function]}
          >
            <span>
              Log out
            </span>
          </li>
        </ul>
        <ul
          className="c8"
        >
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                About Schema CMS
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                API Doc
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                GitHub Repository
              </span>
            </a>
          </li>
        </ul>
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/TopHeader Menu with Users 1`] = `
.c0 {
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c7 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c5:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c8 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c8 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c8:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c5 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <div
        className="c3"
      >
        <ul
          className="c4"
        >
          <li
            className="c5"
          >
            <a
              href="/project"
              id={null}
              onClick={[Function]}
            >
              <span>
                Projects
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/user"
              id="userBtn"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/settings"
              id={null}
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </li>
          <li
            className="c6"
            id="logoutBtn"
            onClick={[Function]}
          >
            <span>
              Log out
            </span>
          </li>
        </ul>
        <ul
          className="c7"
        >
          <li
            className="c8"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                About Schema CMS
              </span>
            </a>
          </li>
          <li
            className="c8"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                API Doc
              </span>
            </a>
          </li>
          <li
            className="c8"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                GitHub Repository
              </span>
            </a>
          </li>
        </ul>
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/TopHeader Menu without Projects 1`] = `
.c0 {
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: none;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c5:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c5 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "18px",
          "width": "100%",
        }
      }
    >
      <div>
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <button
        disabled={false}
        id="topHeaderOpenMenuBtn"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": 6,
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#000",
          "color": "#FFF",
          "maxWidth": null,
          "minHeight": "100vh",
          "padding": "18px 20px 27px",
          "position": "fixed",
          "right": 0,
          "textAlign": "left",
          "top": 0,
          "transform": "translateX(100%)",
          "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
          "visibility": 0,
          "width": "100%",
          "zIndex": 9999,
        }
      }
    >
      <div
        className=""
      >
        <div
          className=""
        >
          <h2
            className="c1"
            id="headerTitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            Projects
          </h2>
          <h1
            className="c2"
            id="headerSubtitle"
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            Overview
          </h1>
        </div>
      </div>
      <div
        className="c3"
      >
        <ul
          className="c4"
        >
          <li
            className="c5"
          >
            <a
              href="/project"
              id={null}
              onClick={[Function]}
            >
              <span>
                Projects
              </span>
            </a>
          </li>
          <li
            className="c5"
          >
            <a
              href="/user"
              id="userBtn"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </li>
          <li
            className="c6"
          >
            <a
              href="/settings"
              id={null}
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </li>
          <li
            className="c7"
            id="logoutBtn"
            onClick={[Function]}
          >
            <span>
              Log out
            </span>
          </li>
        </ul>
        <ul
          className="c8"
        >
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                About Schema CMS
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                API Doc
              </span>
            </a>
          </li>
          <li
            className="c9"
          >
            <a
              href="/"
              id={null}
              onClick={[Function]}
            >
              <span>
                GitHub Repository
              </span>
            </a>
          </li>
        </ul>
      </div>
      <button
        disabled={false}
        id="topHeaderCloseMenuButton"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "borderRadius": "48px",
            "color": "#FFF",
            "cursor": "pointer",
            "display": "inline-block",
            "fill": "#FFF",
            "fontSize": "18px",
            "margin": "0",
            "minHeight": "48px",
            "outline": "none",
            "padding": "0",
            "position": "absolute",
            "right": 0,
            "top": "6px",
            "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          }
        }
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "60px",
              "width": "60px",
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
